# dynamik

./: .gitignore  README.md  drift.py  fields.py  input.py  main.py  model.py  pyproject.toml
data/logs/: batches1.csv  batches2.csv  batches3.csv  batches4.csv  batches5.csv  mapping.json  simple_batching.csv
data/logs/real/: work_orders.mapping.json
data/models/: base-complex.bpmn  base-sequence-batching.json  base-sequence-fast-execution.json  base-sequence-limited-availability-long-running-no-waiting.json  base-sequence-limited-availability.json  base-sequence-long-run.json  base-sequence-with-unavailability.json  base-sequence.bpmn  base-sequence.json  base.model.bpmn  base_prioritization.json  complex_batching.json
data/results/batching/timeframe(14 days, 0_00_00)/warmup(1 day, 0_00_00)/threshold(0.5)/overlap(0.5)/warnings(3)/: drifts.csv
data/results/batching/timeframe(14 days, 0_00_00)/warmup(1 day, 0_00_00)/threshold(0_10_00)/overlap(0.0)/warnings(3)/: drifts.csv
data/results/batching/timeframe(14 days, 0_00_00)/warmup(7 days, 0_00_00)/threshold(0.2)/overlap(0.0)/warnings(3)/: drifts.csv
data/results/batching/timeframe(14 days, 0_00_00)/warmup(7 days, 0_00_00)/threshold(0.2)/overlap(0.5)/warnings(1)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(1 day, 0_00_00)/threshold(0.1)/overlap(0.0)/warnings(3)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(1 day, 0_00_00)/threshold(0.1)/overlap(0.5)/warnings(1)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(1 day, 0_00_00)/threshold(0_10_00)/overlap(0.5)/warnings(1)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(1 day, 0_00_00)/threshold(0_10_00)/overlap(0.5)/warnings(3)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(7 days, 0_00_00)/threshold(0.1)/overlap(0.5)/warnings(1)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(7 days, 0_00_00)/threshold(0.1)/overlap(0.5)/warnings(3)/: drifts.csv
data/results/batching/timeframe(7 days, 0_00_00)/warmup(7 days, 0_00_00)/threshold(0.5)/overlap(0.5)/warnings(1)/: drifts.csv
data/scenarios/: base.scenario.json  batching.scenario.json  contention1.scenario.json  contention2.scenario.json  prioritization.scenario.json  unavailability1.scenario.json  unavailability2.scenario.json
data/stats/: base.stat.csv  batching.stat.csv  contention1.stat.csv  contention2.stat.csv  prioritization.stat.csv  simulation_warnings.txt  unavailability1.stat.csv  unavailability2.stat.csv
dynamik/: __main__.py  cli.py  model.py  output.py
dynamik/drift/: __init__.py  causality.py  detection.py  model.py
dynamik/input/: __init__.py  csv.py
dynamik/utils/: bayes.py  logger.py  rules.py
dynamik/utils/pm/: batching.py  calendars.py  concurrency.py  prioritization.py  processing.py  profiles.py  waiting.py
epd/: __init__.py  runner.py
epd/drift/: __init__.py  drift.py  model.py
epd/filters/: filters.py
epd/input/: __init__.py  mapping.py
epd/input/csv/: __init__.py  mapping.py  reader.py
epd/input/json/: __init__.py  mapping.py  reader.py
epd/model/: __init__.py  model.py
experiments/eq1/: experiment.py  log_generation.py
experiments/eq1/scenarios/: alternative1.scenario.json  alternative10.scenario.json  alternative2.scenario.json  alternative3.scenario.json  alternative4.scenario.json  alternative5.scenario.json  alternative6.scenario.json  alternative7.scenario.json  alternative8.scenario.json  alternative9.scenario.json  base.scenario.json
experiments/eq1/stats/: scenario10.stat.csv  scenario100.stat.csv  scenario101.stat.csv  scenario11.stat.csv  scenario12.stat.csv  scenario20.stat.csv  scenario21.stat.csv  scenario30.stat.csv  scenario31.stat.csv  scenario32.stat.csv  scenario33.stat.csv  scenario34.stat.csv  scenario40.stat.csv  scenario41.stat.csv  scenario50.stat.csv  scenario51.stat.csv  scenario52.stat.csv  scenario53.stat.csv  scenario60.stat.csv  scenario61.stat.csv  scenario62.stat.csv  scenario70.stat.csv  scenario71.stat.csv  scenario80.stat.csv  scenario81.stat.csv  scenario90.stat.csv  scenario91.stat.csv  scenario92.stat.csv  scenario93.stat.csv  scenario94.stat.csv  scenario95.stat.csv  simulation_warnings.txt
experiments/eq2/: experiment.py  log_generation.py
experiments/eq2/mappings/: prosimos.mapping.json
experiments/eq2/models/: base.model.bpmn
experiments/eq2/scenarios/: base.scenario.json  scenario1.scenario.json  scenario2.scenario.json  scenario3.scenario.json  scenario4.scenario.json  scenario5.scenario.json
experiments/eq2/stats/: scenario10.stat.csv  scenario11.stat.csv  scenario20.stat.csv  scenario21.stat.csv  scenario30.stat.csv  scenario31.stat.csv  scenario40.stat.csv  scenario41.stat.csv  scenario50.stat.csv  scenario51.stat.csv  simulation_warnings.txt
expert/: __init__.py  __logger.py  __main__.py  __runner.py  cli.py  logger.py  model.py  output.py  process_model.py  runner.py  timer.py
expert/drift/: __init__.py  causality.py  causes.py  detection.py  drift.py  features.py  model.py  plot.py
expert/filters/: __init__.py  filters.py
expert/input/: __init__.py  csv.py  json.py  mapping.py
expert/input/csv/: __init__.py  mapping.py  reader.py
expert/input/json/: __init__.py  mapping.py  reader.py
expert/model/: __init__.py  model.py
expert/utils/: __init__.py  activities.py  batching.py  calendars.py  cases.py  concurrency.py  feature_selection.py  filters.py  log.py  logger.py  model.py  prioritization.py  processing.py  resources.py  rules.py  statistical_tests.py  timer.py  waiting.py
expert/utils/pm/: batching.py  calendars.py  concurrency.py  event_distribution.py  prioritization.py  processing.py  profiles.py  waiting.py
scripts/: from_file.py  log_generation.py  logger_config.py  rediscoverability_experiments.py  run_from_file.py
test/: test_batching.py  test_feature_selection.py  test_filter.py  test_prioritization.py  testing.py
(+518 files in other folders)
