[tool.poetry]
name = "explainable-performance-drift"
version = "0.1.0"
description = "A package for detecting performance drifts in process models by analyzing event logs"
license = "Apache-2.0"
authors = ["Victor Gallego-Fontenla <victorjose.gallego@usc.gal>"]
readme = "README.md"
repository = "https://gitlab.citius.usc.es/ProcessMining/explainable-performance-drift.git"
packages = [{ include = "expert" }]

[tool.poetry.scripts]
expert = "expert.__runner:run"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
river = "^0.15.0"
scipy = "^1.10.1"
intervaltree = "^3.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
taskipy = "^1.10.3"
pdoc3 = "^0.10.0"

[tool.taskipy.tasks.lint]
cmd = "ruff check ."
help = "lint the code using ruff"

[tool.taskipy.tasks.docs]
cmd = "pdoc --html --output-dir html expert --config show_source_code=False --force"
help = "generate documentation in HTML format"

[tool.taskipy.tasks.live-docs]
cmd = "pdoc --http : expert --config show_source_code=False"
help = "serve documentation in a live server and recompile it if a change is detected"

[tool.ruff]
select = [
    "F", "E", "W", "C90", "I", "N", "D", "UP", "ANN", "FBT", "B", "A", "COM", "C4", "DTZ", "EXE",
    "ISC", "ICN", "G", "INP", "PIE", "Q003", "RET", "SLF", "SIM", "TID", "ARG", "ERA", "PD", "PL",
    "PLE", "PLR", "PLW", "NPY", "RUF"
]
ignore = ["D203", "D212", "PLE1205", "B008", "D400", "D403", "D415", "D417", "D404", "D205"]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D400",  "E501"]
"__runner.py" = ["D103", "N811"]

[tool.ruff.pylint]
max-args = 6

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"