[tool.poetry]
name = "expert"
version = "0.1.0"
description = "A package for detecting performance drifts in process models by analyzing event logs"
license = "Apache-2.0"
authors = ["Victor Gallego-Fontenla <victorjose.gallego@usc.gal>"]
readme = "README.md"
repository = "https://gitlab.citius.usc.es/ProcessMining/explainable-performance-drift.git"
packages = [{ include = "expert" }]

[tool.poetry.scripts]
expert = "expert.cli:run"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
intervaltree = "^3.1.0"
coloredlogs = "^15.0.1"
matplotlib = "^3.7.1"
verboselogs = "^1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
taskipy = "^1.10.3"
pdoc3 = "^0.10.0"

[tool.taskipy.tasks.lint]
cmd = "ruff check ."
help = "lint the code using ruff"

[tool.taskipy.tasks.docs]
cmd = "pdoc --html --output-dir html expert --config show_source_code=False --force"
help = "generate documentation in HTML format"

[tool.taskipy.tasks.live-docs]
cmd = "pdoc --http : expert --config show_source_code=False"
help = "serve documentation in a live server and recompile it if a change is detected"

[tool.ruff]
select = [
    "F", "E", "W", "C90", "I", "N", "D", "UP", "ANN", "FBT", "B", "A", "COM", "C4", "DTZ", "EXE",
    "ISC", "ICN", "G", "INP", "PIE", "Q003", "RET", "SLF", "SIM", "TID", "ARG", "ERA", "PD", "PL",
    "PLE", "PLR", "PLW", "NPY", "RUF"
]
ignore = ["PLE1205", "PLR2004", "B008", "B024", "D105", "D400", "D404", "N801"]
line-length = 120
target-version = "py311"
extend-exclude = ["scripts/*"]

[tool.ruff.per-file-ignores]
"cli.py" = ["D103", "N811", "C901", "PLR0912"]

[tool.ruff.pylint]
max-args = 7

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"