[tool.poetry]
name = "dynamik"
version = "0.1.0"
description = "A package for analyzing process dynamics from event logs"
license = "Apache-2.0"
authors = ["Victor Gallego-Fontenla <victorjose.gallego@usc.gal>"]
readme = "README.md"
repository = "https://gitlab.citius.usc.es/ProcessMining/explainable-performance-drift.git"
packages = [{ include = "dynamik" }]

[tool.poetry.scripts]
expert = "dynamik.cli:run"

[tool.poetry.dependencies]
python = "~3.11"
verboselogs = "1.7"
coloredlogs = "15.0.1"
pyyaml = "6.0.1"
pandas = {extras = ["performance"], version = "2.1.4"}
numpy = "1.26.4"
scipy = "1.13.0"
intervaltree = { git = "https://github.com/chaimleib/intervaltree.git" }
matplotlib = "3.8.4"
anytree = "2.12.1"
imodels = "1.4.3"
scikit-learn = "1.4.2"
imbalanced-learn = "0.12.2"
rich-argparse = "1.4.0"
pyjanitor = "0.27.0"
statsmodels = "0.14.2"
#pymc = "^5.15.0"
#numpyro = "^0.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
taskipy = "^1.10.3"
pdoc3 = "^0.10.0"


[tool.poetry.group.log-generation.dependencies]
#prosimos = "^2.0.4"
prosimos = "2.0.4"

[tool.taskipy.tasks.lint]
cmd = "ruff check ."
help = "lint the code using ruff"

[tool.taskipy.tasks.docs]
cmd = "pdoc --html --output-dir html expert --config show_source_code=False --force"
help = "generate documentation in HTML format"

[tool.taskipy.tasks.live-docs]
cmd = "pdoc --http : expert --config show_source_code=False"
help = "serve documentation in a live server and recompile it if a change is detected"

[tool.ruff]
select = [
    "F", "E", "W", "C90", "I", "N", "D", "UP", "ANN", "FBT", "B", "A", "COM", "C4", "DTZ", "EXE",
    "ISC", "ICN", "G", "INP", "PIE", "Q003", "RET", "SLF", "SIM", "TID", "ARG", "ERA", "PD", "PL",
    "PLE", "PLR", "PLW", "NPY", "RUF"
]
ignore = [
    "PLE1205", "PLR0913", "PLR0915", "PLR2004", "B008", "B024", "D105", "D400", "D401", "D404", "N801",
    "ERA001", "F841", "PLW2901", "C901", "RUF012", "ANN401",  "PLR0911", "PLR0912", "RUF015"
]
line-length = 150
target-version = "py311"
extend-exclude = ["scripts/*"]

[tool.ruff.per-file-ignores]
"cli.py" = ["D103", "N811", "C901", "PLR0912"]

[tool.ruff.pylint]
max-args = 7

[tool.ruff.pydocstyle]
convention = "numpy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"